--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -44,7 +44,7 @@
 
     {% if sidebar.download-pdf %}
     <li class="pdf"><i class="fas fa-file-pdf"></i>
-      <a href="{{ sidebar.download-pdf }}" target="_blank">Download PDF</a>
+      <a href="{{ sidebar.download-pdf }}" target="_blank">Download File</a>
     </li>
     {% endif %}
   </ul>
