--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -89,7 +89,7 @@ p {
   .tagline {
     color: rgba(256, 256, 256, 0.6);
     font-size: 16px;
-    font-weight: 400;
+    //font-weight: 400;
     margin-top: 0;
     margin-bottom: 0;
     font-style: italic;
