--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -87,8 +87,8 @@ p {
     margin-bottom: 10px;
   }
   .tagline {
-    color: rgba(256, 256, 256, 0.6);
-    font-size: 16px;
+    //color: rgba(256, 256, 256, 0.6);
+    //font-size: 16px;
     //font-weight: 400;
     margin-top: 0;
     margin-bottom: 0;
