--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -90,9 +90,9 @@ p {
     //color: rgba(256, 256, 256, 0.6);
     //font-size: 16px;
     //font-weight: 400;
-    margin-top: 0;
-    margin-bottom: 0;
-    font-style: italic;
+    //margin-top: 0;
+    //margin-bottom: 0;
+    //font-style: italic;
   }
   .tagline-highlight {
     color: rgba(256, 256, 256, 0.6);
