--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -94,11 +94,10 @@ p {
     margin-bottom: 0;
   }
   .tagline-highlight {
+    color: #fff;
     font-size: 16px;
     font-weight: 400;
-    margin-top: 0;
-    margin-bottom: 0;
-  }  
+  }    
   .profile {
     margin-bottom: 15px;
   }
