--- a/_includes/skills-tech.html
+++ b/_includes/skills-tech.html
@@ -1,6 +1,6 @@
 {% assign skills = site.data.data.skills-tech %}
 {% assign skills-attributes = site.data.data.skills-attributes %}
-<div class="gap-navbar" id="s-offeredskills"></div>
+<div class="gap-navbar" id="s-skillsoffered"></div>
   <sectionwithgap class="section skills-a-section">
     {% if skills %}
     <h2 class="section-title">
