--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -42,9 +42,9 @@
     </li>
     {% endif %}
 
-    {% if sidebar.download-pdf %}
+    {% if <sidebar class="download-file"></sidebar> %}
     <li class="pdf"><i class="fas fa-file-pdf"></i>
-      <a href="{{ sidebar.download-pdf }}" target="_blank">Download File</a>
+      <a href="{{ sidebar.download-file }}" target="_blank">Download File</a>
     </li>
     {% endif %}
   </ul>
