--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -42,5 +42,11 @@
     </li>
     {% endif %}
 
+    {% if <sidebar class="download-file"></sidebar> %}
+    <li class="pdf"><i class="fas fa-file-pdf"></i>
+      <a href="{{ sidebar.download-file }}" target="_blank">Download File</a>
+    </li>
+    {% endif %}
+    
   </ul>
 </div>
