--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -42,9 +42,9 @@
     </li>
     {% endif %}
 
-    {% if <sidebar class="download-pdf"></sidebar> %}
+    {% if sidebar.download-file %}
     <li class="pdf"><i class="fas fa-file-pdf"></i>
-      <a href="{{ sidebar.download-file }}" target="_blank">Download File</a>
+      <a href="{{ sidebar.download-file }}" target="_blank">Download PDF</a>
     </li>
     {% endif %}
     
