--- a/_includes/skills-attributes.html
+++ b/_includes/skills-attributes.html
@@ -1,7 +1,7 @@
 {% assign skills-attributes = site.data.data.skills-attributes %}
 {% if skills-attributes %}
 <div class="gap-navbar"></div>
-  <section class="section skills-a-section">
+  <sectionwithgap class="section skills-a-section">
     <h2 class="section-title">
       <span class="fa-stack fa-xs">
         <i class="fas fa-circle fa-stack-2x"></i>
